style: fix totalcard overlaping overcards in customerProducts

--- a/front-end/src/Page/styles/customerProduct.css
+++ b/front-end/src/Page/styles/customerProduct.css
@@ -13,6 +13,7 @@
   gap: 60px;
   justify-content: space-around;
   margin: auto;
+  margin-bottom: 70px;
   max-width: 1200px;
   padding: 20px;
 }
